Incluye control sobre la influencia del broker y la media. También incluye la posibilidad de establecer jugadores que obligatoriamente tienen que estar en el equipo

--- a/README
+++ b/README
@@ -1,2 +1,3 @@
-Para compilar utiliza la siguiente orden:
-gcc supermanager.c -O3 -fopenmp
+Para compilar utiliza los siguientes comandos:
+make clean
+make all
