Añadido ejemplo al README

--- a/README
+++ b/README
@@ -1,3 +1,11 @@
 Para compilar utiliza los siguientes comandos:
 make clean
 make all
+
+Para ejecutar:
+time ./supermanager [-m 0.5 -b 0.5 -e 500000 -j "Savané, Sitapha;Granger, Jayson;Quezada, Manny;"]
+
+-m: Porcentaje que se tiene en cuenta de la media.
+-b: Porcentaje que se tiene en cuenta del broker.
+-e: Máximo dinero sin gastar.
+-j: Lista de jugadores que tienen que estar en el equipo. Formato: "nombreJugador;nombreJugador;.....;"
